--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
                 <button>Sign Up</button>
             </form>
         </div>
+        <div class="toggle-container">
+            <div class="toggle-panel toggle-left">
+                <h1>Welcome Back!</h1>
+                <p>Enter your personal details to use all of site features</p>
+                <button class="hidden" id="login">Sign in</button>
+            </div>
+            <div class="toggle-panel toggle-right">
+                <h1>Hello friend!</h1>
+                <p>Register with your personal details to use all of site features</p>
+                <button class="hidden" id="rigister">Sign up</button>
+            </div>
+        </div>
     </div>
     
     <script src="script.js"></script>
