--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
                 <button>Sign Up</button>
             </form>
         </div>
+        <div class="form-container sign up">
+            <form>
+                <h1>Sign in</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+                </div>
+                <span>or use your email password</span>
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+                <a href="#">Forget Your Password?</a>
+                <button>Sign in</button>
+            </form>
+        </div>
         <div class="toggle-container">
             <div class="toggle-panel toggle-left">
                 <h1>Welcome Back!</h1>
