--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>login page</title>
+    <title>Modern Login Page | AsmrProg</title>
 </head>
+
 <body>
 
-
-    
     <div class="container" id="container">
-        <div class="form-container sign up">
+        <div class="form-container sign-up">
             <form>
                 <h1>Create Account</h1>
                 <div class="social-icons">
@@ -28,9 +28,9 @@
                 <button>Sign Up</button>
             </form>
         </div>
-        <div class="form-container sign up">
+        <div class="form-container sign-in">
             <form>
-                <h1>Sign in</h1>
+                <h1>Sign In</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
@@ -38,27 +38,29 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
-                <input type="text" placeholder="Name">
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <a href="#">Forget Your Password?</a>
-                <button>Sign in</button>
+                <button>Sign In</button>
             </form>
         </div>
         <div class="toggle-container">
-            <div class="toggle-panel toggle-left">
-                <h1>Welcome Back!</h1>
-                <p>Enter your personal details to use all of site features</p>
-                <button class="hidden" id="login">Sign in</button>
-            </div>
-            <div class="toggle-panel toggle-right">
-                <h1>Hello friend!</h1>
-                <p>Register with your personal details to use all of site features</p>
-                <button class="hidden" id="rigister">Sign up</button>
+            <div class="toggle">
+                <div class="toggle-panel toggle-left">
+                    <h1>Welcome Back!</h1>
+                    <p>Enter your personal details to use all of site features</p>
+                    <button class="hidden" id="login">Sign In</button>
+                </div>
+                <div class="toggle-panel toggle-right">
+                    <h1>Hello, Friend!</h1>
+                    <p>Register with your personal details to use all of site features</p>
+                    <button class="hidden" id="register">Sign Up</button>
+                </div>
             </div>
         </div>
     </div>
-    
+
     <script src="script.js"></script>
 </body>
+
 </html>
